--- a/src/styles/blocks/welcome-section.pcss
+++ b/src/styles/blocks/welcome-section.pcss
@@ -1,6 +1,5 @@
-.double-section {
+.welcome-section {
   background: url('../images/bg/Mountain_Baloon.jpg');
   background-size: cover;
-  background-position: 50% 20%;
   background-repeat: no-repeat;
 }
