--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -1,5 +1,5 @@
 .footer {
-  padding: 30px 0;
+  padding: 80px 0;
   color: #fff;
   background: #1f232d;
 }
@@ -10,11 +10,58 @@
 }
 
 .footer__copyright {
-  width: 30%;
+  width: 25%;
+}
+
+.copyright {
+  display: flex;
+
+  &__year {
+    opacity: 0.1;
+    font-size: 48px;
+    font-weight: 700;
+    margin-right: 50px;
+  }
+
+  &__username {
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 1.6em;
+    margin-bottom: 20px;
+  }
+
+  &__desc {
+    opacity: 0.15;
+    line-height: 1.6em;
+  }
 }
 
 .footer__data {
-  width: 60%;
+  width: 65%;
+}
+
+.footer__data-columns {
+  display: flex;
+}
+
+.footer__data-col {
+  width: 40%;
+  margin-right: 15%;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.footer__text {
+  opacity: 0.3;
+  line-height: 1.8em;
+  margin-bottom: 25px;
+}
+
+.footer__text-author {
+  font-style: italic;
 }
 
 .footer__menu {
