--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -7,7 +7,7 @@
 }
 
 .form {
-  width: 50%;
+  width: 60%;
   display: flex;
   flex-direction: column;
 }
@@ -19,10 +19,20 @@
 
 .form__block {
   flex: 1;
+  position: relative;
 
   &:first-child {
     margin-right: 20px;
   }
+}
+
+.form__icon {
+  width: 30px;
+  height: 30px;
+  fill: #c8cbd3;
+  position: absolute;
+  top: 40px;
+  left: 0;
 }
 
 .form__input {
@@ -31,6 +41,7 @@
   border-bottom: 1px solid #000;
   background-color: rgba(0,0,0,0);
   padding: 15px 0;
+  padding-left: 40px;
 
   &--full {
     width: 100%;
