--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -4,11 +4,19 @@
 
   &--rounded {
     .socials__link {
-      border: 1px solid #ccc;
+      border: 1px solid #62656c;
       border-radius: 50%;
       width: 50px;
       height: 50px;
       position: relative;
+
+      &:hover {
+        border: 1px solid #fff;
+
+        .socials__icon {
+          fill: #fff;
+        }
+      }
 
       .socials__icon {
         position: absolute;
@@ -17,10 +25,7 @@
         transform: translate(-50%, -50%);
         width: 20px;
         height: 20px;
-
-        &:hover {
-          fill: #fff;
-        }
+        fill: #62656c;
       }
     }
   }
