--- a/src/styles/blocks/bottom-section.pcss
+++ b/src/styles/blocks/bottom-section.pcss
@@ -2,5 +2,5 @@
   background: url('../images/bg/Budda.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  margin-bottom: 130px;
+  padding-bottom: 130px;
 }
