--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -60,10 +60,10 @@
 
 .quote__text {
   display: flex;
+  min-height: 200px;
   opacity: 0.5;
   font-weight: 700;
   line-height: 1.7em;
-  margin-bottom: 25px;
 
   &:before {
     content: url('../images/icons/left-quote.png');
