Сделал адаптив для desktop и tablets

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,13 +1,10 @@
 include ./mixins.pug
-//+image('content/user.jpg', 'user-pic')
-//+icon('link', 'link-class')
-//.icon-bg
 
 <!DOCTYPE html>
 html(lang="en")
   head
     meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Portfolio | Igor Chernyak
     link(rel="stylesheet", href="./styles/main.pcss")
@@ -195,7 +192,8 @@ html(lang="en")
                   article.footer__text
                     p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
                   .footer__text-author Martin Golding
-
+      .hamburger-menu
+        .hamburger-menu__link
                     
 
 
