--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -1,6 +1,6 @@
 .skill {
-  width: 150px;
-  height: 150px;
+  max-width: 150px;
+  max-height: 150px;
   fill: transparent;
   stroke: #ccc;
   stroke-width: 3px;
@@ -50,6 +50,7 @@
 }
 
 .skill__title {
+  display: block;
   position: absolute;
   top: 50%;
   left: 50%;
