--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -17,11 +17,20 @@
   flex-direction: column;
   align-items: center;
   margin-right: 80px;
+
+  @include tablets {
+    width: 55%;
+    margin-right: 20px;
+  }
 }
 
 .about__right {
-  height: 50%;
+  height: 45%;
   width: 38%;
+
+  @include tablets {
+    width: 50%;
+  }
 }
 
 .user__avatar {
@@ -46,6 +55,10 @@
   &:last-child {
     opacity: 1;
   }
+
+  @include tablets {
+    padding: 2px;
+  }
 }
 
 .about__welcome {
@@ -53,6 +66,10 @@
   color: #414c63;
   font-weight: 700;
   margin-bottom: 20px;
+
+  @include tablets {
+    margin-bottom: 10px;
+  }
 }
 
 .about__username {
@@ -60,6 +77,10 @@
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 38px;
+
+  @include tablets {
+    margin-bottom: 20px;
+  }
 }
 
 .about__desc {
@@ -67,6 +88,10 @@
   color: #414c63;
   font-weight: 700;
   margin-bottom: 80px;
+
+  @include tablets {
+    margin-bottom: 30px;
+  }
 }
 
 .about__ps {
