--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -1,16 +1,31 @@
 .works__container {
   height: 100%;
   display: flex;
+
+  @include tablets {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .works__left {
   width: 60%;
   height: 80%;
   margin-right: 7%;
+
+  @include tablets {
+    width: 90%;
+    height: 50%;
+    margin-right: 0;
+  }
 }
 
 .works__title {
   margin-bottom: 60px;
+  
+  @include tablets {
+    margin-bottom: 30px;
+  }
 }
 
 .works__slider {
@@ -98,6 +113,13 @@
   padding: 110px 0;
   display: flex;
   flex-direction: column;
+
+  @include tablets {
+    width: 70%;
+    padding: 50px 0;
+    align-items: center;
+    text-align: center;
+  }
 }
 
 .works__right-skills {
