--- a/src/styles/blocks/bottom-section.pcss
+++ b/src/styles/blocks/bottom-section.pcss
@@ -2,5 +2,6 @@
   background: url('../images/bg/Budda.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: 57% 50%;
   padding-bottom: 130px;
 }
