--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -1,59 +1,39 @@
 .skill {
+  position: relative;
   width: 150px;
   height: 150px;
-  fill: transparent;
-  stroke: #ccc;
-  stroke-width: 3px;
-  position: relative;
 
-  &:nth-child(1) {
-    .skill__circle-above {
-      stroke-dasharray: 200;
-    }
+  @include tablets {
+    width: 135px;
+    height: 135px;
   }
-
-  &:nth-child(2) {
-    .skill__circle-above {
-      stroke-dasharray: 180;
-    }
-  }
-
-  &:nth-child(3) {
-    .skill__circle-above {
-      stroke-dasharray: 145;
-    }
-  }
-
-  &:nth-child(4) {
-    .skill__circle-above {
-      stroke-dasharray: 125;
-    }
-  }
-}
-
-.skill__shape {
-    width: 100%;
 }
 
 .skill__circle {
-    fill: transparent;
-}
-
-.skill__circle-under {
-    stroke-width: 8;
+  fill: transparent;
+  &_under {
     stroke: #eaeaea;
+    stroke-width: 5px;
+  }
+  &_above {
+    stroke-width: 12px;
+    stroke-dasharray: 251;
+    stroke-dashoffset: 100;
+  }
 }
 
-.skill__circle-above {
-    stroke-width: 12;
-    stroke-dasharray: 286;
-}
-
-.skill__title {
+.skill__circle-text {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-weight: bold;
+  font-size: 18px;
+  color: rgba($text-color, .5);
+  padding: 14px;
   text-align: center;
-}
 
+  @include phones {
+    font-size: 16px;
+  }
+}
