--- a/src/styles/blocks/skills-row.pcss
+++ b/src/styles/blocks/skills-row.pcss
@@ -1,16 +1,18 @@
 .skills-row__title {
-  margin-bottom: 30px;
+  margin-bottom: 26px;
   font-size: 24px;
-  font-weight: 700;
-}
-
-.skills-row__item {
-  margin-right: 35px;
-  font-size: 18px;
-  opacity: 0.5;
   font-weight: 700;
 }
 
 .skills-row__list {
   display: flex;
+  flex-wrap: wrap;
+  margin-left: -4%;
+  @include tablets {
+    justify-content: center;
+  }
+}
+
+.skills-row__item {
+  margin-left: 4%;
 }
