--- a/src/styles/blocks/user-skills.pcss
+++ b/src/styles/blocks/user-skills.pcss
@@ -1,8 +1,15 @@
-.user-skills {
-  width: 63%;
-  align-self: flex-end;
+.skills {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @include tablets {
+    text-align: center;
+  }
 }
 
-.user-skills__item {
-  margin-bottom: 35px;
+.skills__item {
+  width: 100%;
+  margin-bottom: 30px;
 }
